tests/ui/parser/recover/recover-colon-instead-of-eq-in-local.rs
fn main() {
    let _: std::env::temp_dir().join("foo"); //~ ERROR expected one of
}
